--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Erlend Westbye",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bootstrap": "^4.0.0-alpha.4",
     "jquery": "^3.1.1",
     "react": "^15.3.2",
@@ -19,5 +23,5 @@
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
-  "comments": "to add : babel dependency"
+  "comments": ""
 }
