--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0-alpha.4",
+    "btoa": "^1.1.2",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
     "jquery": "^3.1.1",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
