--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
+    "react-search": "^2.0.4",
     "redux": "^3.6.0",
     "superagent": "^2.3.0",
     "webpack": "^1.13.3",
