--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Erlend Westbye",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
@@ -25,6 +26,7 @@
     "react-redux": "^4.4.5",
     "react-search": "^2.0.4",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "superagent": "^2.3.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
