--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
+    "react-gmaps": "^1.5.0",
     "react-redux": "^4.4.5",
     "react-search": "^2.0.4",
     "redux": "^3.6.0",
