--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Erlend Westbye",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.2",
     "axios": "^0.15.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
