--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
+    "load-google-maps-api":"0.0.2",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
