--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A react test project for new bh chat frontend",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "Erlend Westbye",
   "license": "ISC",
@@ -21,12 +22,14 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
-    "load-google-maps-api":"0.0.2",
+    "load-google-maps-api": "0.0.2",
+    "moment": "^2.17.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-gmaps": "^1.5.0",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "react-search": "^2.0.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
