--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A react test project for new bh chat frontend",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "Erlend Westbye",
   "license": "ISC",
