--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "moment": "^2.17.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.6",
+    "react-datepicker": "^0.34.0",
+    "react-day-picker": "^3.1.1",
     "react-dom": "^15.3.2",
     "react-gmaps": "^1.5.0",
     "react-redux": "^4.4.5",
