--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "load-google-maps-api": "0.0.2",
     "moment": "^2.17.0",
     "react": "^15.3.2",
+    "react-addons-perf": "^15.4.1",
     "react-bootstrap": "^0.30.6",
     "react-datepicker": "^0.34.0",
     "react-day-picker": "^3.1.1",
